--- a/i3/config
+++ b/i3/config
@@ -24,7 +24,7 @@ font pango: Cure 8
 # font, it doesn’t scale on retina/hidpi displays.
 
 # Make sure steam client is forced into floating
-for_window [class="oblogout" instance="oblogout"] floating enable
+for_window [class="Oblogout"] floating enable 
 
 # Set background
 exec --no-startup-id nitrogen --restore
@@ -49,10 +49,10 @@ bindsym $mod+m exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+odiaeresis focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -73,7 +73,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
