--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.0
+# weechat.conf -- weechat v1.0.1
 #
 
 [debug]
@@ -26,7 +26,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = "${color:12}%H${color:10}:${color:12}%M"
+buffer_time_format = "%H:%M"
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -285,7 +285,7 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = blue
+title.color_bg = darkgray
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
@@ -303,23 +303,21 @@ title.type = window
 [layout]
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.freenode;1"
-default.buffer = "irc;server.tiffany;1"
 default.buffer = "perl;highmon;2"
-default.buffer = "irc;tiffany.&bitlbee;3"
-default.buffer = "irc;freenode.#elementary-de;4"
-default.buffer = "irc;freenode.#stratum0;5"
-default.buffer = "irc;freenode.##knuddelkanal;6"
-default.buffer = "irc;freenode.#manjaro-de;7"
-default.buffer = "irc;freenode.#lua;8"
+default.buffer = "irc;freenode.#stratum0;3"
+default.buffer = "irc;freenode.##knuddelkanal;4"
+default.buffer = "irc;freenode.#manjaro-de;5"
+default.buffer = "irc;freenode.#manjaro-de-talk;6"
+default.buffer = "irc;freenode.#lua;7"
+default.buffer = "perl;iset;8"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;freenode.#elementary-de"
+default.window = "2;1;0;0;irc;freenode.#stratum0"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
 [notify]
 
 [filter]
-irc_smart = on;*;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -432,7 +430,7 @@ meta-a = "/input jump_smart"
 meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
-meta-h = "/input hotlist_clear"
+meta-h = "/buffer -1"
 meta-jmeta-l = "/input jump_last_buffer"
 meta-jmeta-r = "/server raw"
 meta-jmeta-s = "/server jump"
@@ -536,6 +534,7 @@ meta-j97 = "/buffer 97"
 meta-j98 = "/buffer 98"
 meta-j99 = "/buffer 99"
 meta-k = "/input grab_key_command"
+meta-l = "/buffer +1"
 meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
