--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -29,7 +29,8 @@ ethernet eth0 {
 }
 
 battery 0 {
-        format = " %status %percentage #%remaining"
+        format = " %status %percentage %remaining"
+		integer_battery_capacity = true
 }
 
 run_watch DHCP {
