--- a/i3/config
+++ b/i3/config
@@ -48,10 +48,11 @@ client.urgent           $urgentred $urgentred $white $urgentred
 set $ws1  "1:"
 set $ws2  "2:"
 set $ws3  "3:"
-set $ws4  "4:"
+#set $ws4  "4:"
+set $ws4  "4:"
 set $ws5  "5:"
-set $ws6  "6: 6"
-set $ws7  "7: 7"
+set $ws6  "6:"
+set $ws7  "7:"
 set $ws8  "8: 8"
 set $ws9  "9:"
 set $ws10 "10:"
@@ -147,7 +148,6 @@ bindsym XF86MonBrightnessDown exec "xbacklight -10"
 new_window 1pixel
 for_window [class="^.*"] border pixel 1
 for_window [title="^float$"] floating enable 
-
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
