--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.0.1
+# weechat.conf -- weechat v1.1.1
 #
 
 [debug]
@@ -38,6 +38,7 @@ color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
+command_incomplete = off
 confirm_quit = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
@@ -67,6 +68,7 @@ input_share_overwrite = off
 input_undo_max = 32
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
+item_mouse_status = "M"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
@@ -173,6 +175,7 @@ status_data_other = default
 status_data_private = lightgreen
 status_filter = green
 status_more = yellow
+status_mouse = green
 status_name = white
 status_name_ssl = lightgreen
 status_nicklist_count = default
@@ -181,6 +184,7 @@ status_time = default
 
 [completion]
 base_word_until_cursor = on
+command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_completer = ":"
@@ -221,7 +225,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = horizontal
 buffers.filling_top_bottom = horizontal
-buffers.hidden = off
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = top
 buffers.priority = 0
@@ -263,7 +267,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -302,22 +306,26 @@ title.type = window
 
 [layout]
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.freenode;1"
+default.buffer = "irc;server.bnc;1"
 default.buffer = "perl;highmon;2"
-default.buffer = "irc;freenode.#stratum0;3"
-default.buffer = "irc;freenode.##knuddelkanal;4"
-default.buffer = "irc;freenode.#manjaro-de;5"
-default.buffer = "irc;freenode.#manjaro-de-talk;6"
-default.buffer = "irc;freenode.#lua;7"
-default.buffer = "perl;iset;8"
+default.buffer = "irc;bnc.#stratum0;3"
+default.buffer = "irc;bnc.##knuddelkanal;4"
+default.buffer = "irc;bnc.#manjaro-de-talk;5"
+default.buffer = "irc;bnc.#manjaro-de;6"
+default.buffer = "irc;bnc.#lua;7"
+default.buffer = "irc;bnc.#znc;8"
+default.buffer = "irc;bnc.#weechat;9"
+default.buffer = "irc;bnc.#python.de;10"
+default.buffer = "irc;bnc.#youtube-dl;11"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;freenode.#stratum0"
+default.window = "2;1;0;0;irc;bnc.#stratum0"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
 [notify]
 
 [filter]
+irc_smart = on;*;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
