--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -318,7 +318,7 @@ default.buffer = "irc;bnc.#weechat;9"
 default.buffer = "irc;bnc.#python.de;10"
 default.buffer = "irc;bnc.#youtube-dl;11"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;bnc.#stratum0"
+default.window = "2;1;0;0;irc;bnc.##knuddelkanal"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
