--- a/.i3/config
+++ b/.i3/config
@@ -59,8 +59,10 @@ set $ws10 "10:"
 
 #set $default_gaps_inner 9
 #set $default_gaps_outer 3
-set $default_gaps_inner 15
-set $default_gaps_outer 10
+set $default_gaps_inner 0
+#	war mal 15
+set $default_gaps_outer 0
+#war mal 10
 gaps inner $default_gaps_inner
 gaps outer $default_gaps_outer
 force_display_urgency_hint 0 ms
