--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v1.1.1
+# weechat -- weechat.conf
 #
 
 [debug]
@@ -97,6 +97,9 @@ prefix_network = "--"
 prefix_quit = "<--"
 prefix_same_nick = ""
 prefix_suffix = "|"
+quote_nick_prefix = "<"
+quote_nick_suffix = ">"
+quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
 read_marker_string = "- "
@@ -114,6 +117,8 @@ window_auto_zoom = off
 window_separator_horizontal = on
 window_separator_vertical = on
 window_title = "WeeChat ${info:version}"
+word_chars_highlight = "!\u00A0,-,_,|,alnum"
+word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [palette]
 
@@ -312,11 +317,15 @@ default.buffer = "irc;bnc.#stratum0;3"
 default.buffer = "irc;bnc.##knuddelkanal;4"
 default.buffer = "irc;bnc.#manjaro-de-talk;5"
 default.buffer = "irc;bnc.#manjaro-de;6"
-default.buffer = "irc;bnc.#lua;7"
-default.buffer = "irc;bnc.#znc;8"
-default.buffer = "irc;bnc.#weechat;9"
-default.buffer = "irc;bnc.#python.de;10"
-default.buffer = "irc;bnc.#youtube-dl;11"
+default.buffer = "irc;bnc.#znc;7"
+default.buffer = "irc;bnc.#weechat;8"
+default.buffer = "irc;bnc.#lua;9"
+default.buffer = "irc;bnc.#go-nuts;10"
+default.buffer = "irc;bnc.#python.de;11"
+default.buffer = "irc;bnc.#youtube-dl;12"
+default.buffer = "irc;bnc.#neovim;13"
+default.buffer = "irc;bnc.#i3;14"
+default.buffer = "irc;bnc.#android;15"
 default.window = "1;0;15;1;-;-"
 default.window = "2;1;0;0;irc;bnc.##knuddelkanal"
 default.window = "3;1;0;0;perl;highmon"
