weechat conf, buffer changes

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -317,17 +317,17 @@ default.buffer = "irc;bnc.#stratum0;3"
 default.buffer = "irc;bnc.##knuddelkanal;4"
 default.buffer = "irc;bnc.#manjaro-de-talk;5"
 default.buffer = "irc;bnc.#manjaro-de;6"
-default.buffer = "irc;bnc.#znc;7"
-default.buffer = "irc;bnc.#weechat;8"
-default.buffer = "irc;bnc.#lua;9"
-default.buffer = "irc;bnc.#go-nuts;10"
-default.buffer = "irc;bnc.#python.de;11"
-default.buffer = "irc;bnc.#youtube-dl;12"
-default.buffer = "irc;bnc.#neovim;13"
-default.buffer = "irc;bnc.#i3;14"
+default.buffer = "irc;bnc.#lua;7"
+default.buffer = "irc;bnc.#znc;8"
+default.buffer = "irc;bnc.#weechat;9"
+default.buffer = "irc;bnc.#python.de;10"
+default.buffer = "irc;bnc.#youtube-dl;11"
+default.buffer = "irc;bnc.#neovim;12"
+default.buffer = "irc;bnc.#i3;13"
+default.buffer = "irc;bnc.#go-nuts;14"
 default.buffer = "irc;bnc.#android;15"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;bnc.##knuddelkanal"
+default.window = "2;1;0;0;irc;bnc.#stratum0"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
