--- a/.i3/config
+++ b/.i3/config
@@ -81,8 +81,8 @@ for_window [class="Oblogout"] floating enable
 
 # Set background
 exec --no-startup-id nitrogen --restore
-# exec --no-startup-id xset -b
-# exec --no-startup-id setxkbmap de
+ exec --no-startup-id xset -b
+ exec --no-startup-id setxkbmap de
 exec --no-startup-id synclient touchpadoff=1
 
 #### Restore Layout 
