--- a/.i3status.conf
+++ b/.i3status.conf
@@ -22,7 +22,7 @@ wireless wlp2s0 {
         format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet eno1 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
