--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -123,7 +123,7 @@ word_chars_input = "!\u00A0,-,_,|,alnum"
 [palette]
 
 [color]
-bar_more = lightmagenta
+bar_more = magenta
 chat = default
 chat_bg = default
 chat_buffer = white
@@ -217,20 +217,34 @@ gnutls_handshake_timeout = 30
 proxy_curl = ""
 
 [plugin]
-autoload = "*"
+autoload = "*,!tcl,!aspell"
 debug = off
 extension = ".so,.dll"
 path = "%h/plugins"
 save_config_on_unload = on
 
 [bar]
+buddylist.color_bg = default
+buddylist.color_delim = default
+buddylist.color_fg = default
+buddylist.conditions = ""
+buddylist.filling_left_right = vertical
+buddylist.filling_top_bottom = horizontal
+buddylist.hidden = off
+buddylist.items = "buddylist"
+buddylist.position = top
+buddylist.priority = 0
+buddylist.separator = on
+buddylist.size = 0
+buddylist.size_max = 0
+buddylist.type = root
 buffers.color_bg = default
 buffers.color_delim = default
 buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = horizontal
 buffers.filling_top_bottom = horizontal
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = top
 buffers.priority = 0
@@ -258,7 +272,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = on
+isetbar.hidden = off
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -280,7 +294,7 @@ nicklist.separator = off
 nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
-status.color_bg = 0
+status.color_bg = 237
 status.color_delim = 2
 status.color_fg = lightred
 status.conditions = "${buffer.name}!=highmon"
@@ -294,7 +308,7 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = darkgray
+title.color_bg = 237
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
@@ -313,21 +327,8 @@ title.type = window
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.bnc;1"
 default.buffer = "perl;highmon;2"
-default.buffer = "irc;bnc.#stratum0;3"
-default.buffer = "irc;bnc.##knuddelkanal;4"
-default.buffer = "irc;bnc.#manjaro-de-talk;5"
-default.buffer = "irc;bnc.#manjaro-de;6"
-default.buffer = "irc;bnc.#lua;7"
-default.buffer = "irc;bnc.#znc;8"
-default.buffer = "irc;bnc.#weechat;9"
-default.buffer = "irc;bnc.#python.de;10"
-default.buffer = "irc;bnc.#youtube-dl;11"
-default.buffer = "irc;bnc.#neovim;12"
-default.buffer = "irc;bnc.#i3;13"
-default.buffer = "irc;bnc.#go-nuts;14"
-default.buffer = "irc;bnc.#android;15"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;bnc.#stratum0"
+default.window = "2;1;0;0;irc;server.bnc"
 default.window = "3;1;0;0;perl;highmon"
 default.current = on
 
@@ -606,6 +607,8 @@ meta2-D = "/cursor move left"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
 
 [key_mouse]
+@item(buffer_nicklist)>item(buddylist):button1-gesture-* = "hsignal:buddylist_mouse"
+@chat(*)>item(buddylist):button1-gesture-* = "hsignal:buddylist_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
@@ -619,6 +622,8 @@ meta2-D = "/cursor move left"
 @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
 @chat(script.scripts):wheelup = "/script up 5"
+@item(buddylist):button1* = "hsignal:buddylist_mouse"
+@item(buddylist):button1-gesture-* = "hsignal:buddylist_mouse"
 @item(buffer_nicklist):button1 = "/window ${_window_number};/query ${nick}"
 @item(buffer_nicklist):button1-gesture-left = "/window ${_window_number};/kick ${nick}"
 @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
