--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -40,6 +40,7 @@ color_real_white = off
 command_chars = ""
 command_incomplete = off
 confirm_quit = off
+confirm_upgrade = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
@@ -74,6 +75,7 @@ jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
+key_grab_delay = 800
 mouse = off
 mouse_timer_delay = 100
 nick_prefix = ""
@@ -230,7 +232,7 @@ buddylist.color_fg = default
 buddylist.conditions = ""
 buddylist.filling_left_right = vertical
 buddylist.filling_top_bottom = horizontal
-buddylist.hidden = off
+buddylist.hidden = on
 buddylist.items = "buddylist"
 buddylist.position = top
 buddylist.priority = 0
@@ -242,9 +244,9 @@ buffers.color_bg = default
 buffers.color_delim = default
 buffers.color_fg = default
 buffers.conditions = ""
-buffers.filling_left_right = horizontal
-buffers.filling_top_bottom = horizontal
-buffers.hidden = off
+buffers.filling_left_right = vertical
+buffers.filling_top_bottom = columns_vertical
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = top
 buffers.priority = 0
@@ -272,7 +274,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = off
+isetbar.hidden = on
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -326,11 +328,60 @@ title.type = window
 [layout]
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.bnc;1"
+default.buffer = "irc;server.bnc2;1"
 default.buffer = "perl;highmon;2"
+default.buffer = "irc;bnc.#stratum0;3"
+default.buffer = "irc;bnc.##knuddelkanal;4"
+default.buffer = "irc;bnc.#manjaro-de-talk;5"
+default.buffer = "irc;bnc.#manjaro-de;6"
+default.buffer = "irc;bnc.#archlinux.de;7"
+default.buffer = "irc;bnc.#archlinux;8"
+default.buffer = "irc;bnc.#go-nuts;9"
+default.buffer = "irc;bnc.#lua;10"
+default.buffer = "irc;bnc.##learnpython;11"
+default.buffer = "irc;bnc.#python.de;12"
+default.buffer = "irc;bnc.#radare;13"
+default.buffer = "irc;bnc.#r_netsec;14"
+default.buffer = "irc;bnc.##overflow;15"
+default.buffer = "irc;bnc.#honeypots;16"
+default.buffer = "irc;bnc.#i3;17"
+default.buffer = "irc;bnc.#neovim;18"
+default.buffer = "irc;bnc.#weechat;19"
+default.buffer = "irc;bnc.#fluxfingers;20"
+default.buffer = "irc;bnc2.#stratumauhuur;21"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;server.bnc"
+default.window = "2;1;0;0;irc;server.bnc2"
 default.window = "3;1;0;0;perl;highmon"
-default.current = on
+cool.buffer = "core;weechat;1"
+cool.buffer = "irc;server.bnc;1"
+cool.buffer = "irc;server.bnc2;1"
+cool.buffer = "perl;highmon;2"
+cool.buffer = "irc;bnc.#stratum0;3"
+cool.buffer = "irc;bnc.##knuddelkanal;4"
+cool.buffer = "irc;bnc.#manjaro-de-talk;5"
+cool.buffer = "irc;bnc.#manjaro-de;6"
+cool.buffer = "irc;bnc.#archlinux.de;7"
+cool.buffer = "irc;bnc.#archlinux;8"
+cool.buffer = "irc;bnc.#go-nuts;9"
+cool.buffer = "irc;bnc.#lua;10"
+cool.buffer = "irc;bnc.##learnpython;11"
+cool.buffer = "irc;bnc.#python.de;12"
+cool.buffer = "irc;bnc.#radare;13"
+cool.buffer = "irc;bnc.#r_netsec;14"
+cool.buffer = "irc;bnc.##overflow;15"
+cool.buffer = "irc;bnc.#honeypots;16"
+cool.buffer = "irc;bnc.#i3;17"
+cool.buffer = "irc;bnc.#neovim;18"
+cool.buffer = "irc;bnc.#weechat;19"
+cool.buffer = "irc;bnc.#fluxfingers;20"
+cool.buffer = "irc;bnc.##networking;21"
+cool.buffer = "irc;bnc.##security;22"
+cool.buffer = "irc;bnc.bwunters1rich;23"
+cool.buffer = "irc;bnc.ZombiePoet;24"
+cool.window = "1;0;15;1;-;-"
+cool.window = "2;1;0;0;irc;bnc.##knuddelkanal"
+cool.window = "3;1;0;0;perl;highmon"
+cool.current = on
 
 [notify]
 
