--- a/.i3status.conf
+++ b/.i3status.conf
@@ -12,7 +12,7 @@ general {
 }
 
 order += "wireless wlp2s0"
-#order += "ethernet eth0"
+order += "ethernet eno1"
 order += "battery 0"
 order += "tztime local"
 
