--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -67,6 +67,7 @@ input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
+item_away_message = on
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
@@ -76,10 +77,14 @@ jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
 key_grab_delay = 800
-mouse = off
+mouse = on
 mouse_timer_delay = 100
+nick_color_force = ""
+nick_color_hash = djb2
+nick_color_stop_chars = "_|["
 nick_prefix = ""
 nick_suffix = ""
+paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -164,13 +169,14 @@ chat_text_found_bg = lightmagenta
 chat_time = default
 chat_time_delimiters = brown
 chat_value = cyan
+chat_value_null = blue
 emphasized = yellow
 emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
+item_away = yellow
 nicklist_away = cyan
 nicklist_group = green
-nicklist_offline = blue
 separator = blue
 status_count_highlight = magenta
 status_count_msg = brown
@@ -326,62 +332,71 @@ title.size_max = 0
 title.type = window
 
 [layout]
+backup.buffer = "core;weechat;1"
+backup.buffer = "irc;server.bnc;1"
+backup.buffer = "irc;server.bnc2;1"
+backup.buffer = "perl;highmon;2"
+backup.buffer = "irc;bnc.#stratum0;3"
+backup.buffer = "irc;bnc.##knuddelkanal;4"
+backup.buffer = "irc;bnc.#archlinux.de;5"
+backup.buffer = "irc;bnc.#archlinux;6"
+backup.buffer = "irc;bnc.#manjaro-de;7"
+backup.buffer = "irc;bnc.#manjaro-de-talk;8"
+backup.buffer = "irc;bnc.#crux;9"
+backup.buffer = "irc;bnc.##tilingwm;10"
+backup.buffer = "irc;bnc.#i3;11"
+backup.buffer = "irc;bnc.#neovim;12"
+backup.buffer = "irc;bnc.#python.de;13"
+backup.buffer = "irc;bnc.##learnpython;14"
+backup.buffer = "irc;bnc.#go-nuts;15"
+backup.buffer = "irc;bnc.#lua;16"
+backup.buffer = "irc;bnc.##networking;17"
+backup.buffer = "irc;bnc.##security;18"
+backup.buffer = "irc;bnc.#fluxfingers;19"
+backup.buffer = "irc;bnc.#honeypots;20"
+backup.buffer = "irc;bnc.#r_netsec;21"
+backup.buffer = "irc;bnc.#radare;22"
+backup.buffer = "irc;bnc.#weechat;23"
+backup.buffer = "irc;bnc.#znc;24"
+backup.buffer = "irc;bnc.#arduino;25"
+backup.buffer = "irc;bnc2.*status;26"
+backup.buffer = "irc;bnc.tnias;27"
+backup.window = "1;0;15;1;-;-"
+backup.window = "2;1;0;0;irc;server.bnc2"
+backup.window = "3;1;0;0;perl;highmon"
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.bnc;1"
-default.buffer = "irc;server.bnc2;1"
 default.buffer = "perl;highmon;2"
 default.buffer = "irc;bnc.#stratum0;3"
 default.buffer = "irc;bnc.##knuddelkanal;4"
-default.buffer = "irc;bnc.#manjaro-de-talk;5"
-default.buffer = "irc;bnc.#manjaro-de;6"
-default.buffer = "irc;bnc.#archlinux.de;7"
-default.buffer = "irc;bnc.#archlinux;8"
-default.buffer = "irc;bnc.#go-nuts;9"
-default.buffer = "irc;bnc.#lua;10"
-default.buffer = "irc;bnc.##learnpython;11"
-default.buffer = "irc;bnc.#python.de;12"
-default.buffer = "irc;bnc.#radare;13"
-default.buffer = "irc;bnc.#r_netsec;14"
-default.buffer = "irc;bnc.##overflow;15"
-default.buffer = "irc;bnc.#honeypots;16"
-default.buffer = "irc;bnc.#i3;17"
-default.buffer = "irc;bnc.#neovim;18"
-default.buffer = "irc;bnc.#weechat;19"
-default.buffer = "irc;bnc.#fluxfingers;20"
-default.buffer = "irc;bnc2.#stratumauhuur;21"
+default.buffer = "irc;bnc.##learnpython;5"
+default.buffer = "irc;bnc.##networking;6"
+default.buffer = "irc;bnc.##security;7"
+default.buffer = "irc;bnc.##tilingwm;8"
+default.buffer = "irc;bnc.#archlinux;9"
+default.buffer = "irc;bnc.#archlinux.de;10"
+default.buffer = "irc;bnc.#arduino;11"
+default.buffer = "irc;bnc.#crux;12"
+default.buffer = "irc;bnc.#fluxfingers;13"
+default.buffer = "irc;bnc.#go-nuts;14"
+default.buffer = "irc;bnc.#honeypots;15"
+default.buffer = "irc;bnc.#i3;16"
+default.buffer = "irc;bnc.#lua;17"
+default.buffer = "irc;bnc.#manjaro-de;18"
+default.buffer = "irc;bnc.#manjaro-de-talk;19"
+default.buffer = "irc;bnc.#neovim;20"
+default.buffer = "irc;bnc.#python.de;21"
+default.buffer = "irc;bnc.#r_netsec;22"
+default.buffer = "irc;bnc.#radare;23"
+default.buffer = "irc;bnc.#weechat;24"
+default.buffer = "irc;bnc.#znc;25"
+default.buffer = "irc;bnc.#zeromutarts;26"
+default.buffer = "irc;bnc.##shellcoder;27"
+default.buffer = "irc;bnc.tnias;28"
 default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;server.bnc2"
+default.window = "2;1;0;0;irc;bnc.tnias"
 default.window = "3;1;0;0;perl;highmon"
-cool.buffer = "core;weechat;1"
-cool.buffer = "irc;server.bnc;1"
-cool.buffer = "irc;server.bnc2;1"
-cool.buffer = "perl;highmon;2"
-cool.buffer = "irc;bnc.#stratum0;3"
-cool.buffer = "irc;bnc.##knuddelkanal;4"
-cool.buffer = "irc;bnc.#manjaro-de-talk;5"
-cool.buffer = "irc;bnc.#manjaro-de;6"
-cool.buffer = "irc;bnc.#archlinux.de;7"
-cool.buffer = "irc;bnc.#archlinux;8"
-cool.buffer = "irc;bnc.#go-nuts;9"
-cool.buffer = "irc;bnc.#lua;10"
-cool.buffer = "irc;bnc.##learnpython;11"
-cool.buffer = "irc;bnc.#python.de;12"
-cool.buffer = "irc;bnc.#radare;13"
-cool.buffer = "irc;bnc.#r_netsec;14"
-cool.buffer = "irc;bnc.##overflow;15"
-cool.buffer = "irc;bnc.#honeypots;16"
-cool.buffer = "irc;bnc.#i3;17"
-cool.buffer = "irc;bnc.#neovim;18"
-cool.buffer = "irc;bnc.#weechat;19"
-cool.buffer = "irc;bnc.#fluxfingers;20"
-cool.buffer = "irc;bnc.##networking;21"
-cool.buffer = "irc;bnc.##security;22"
-cool.buffer = "irc;bnc.bwunters1rich;23"
-cool.buffer = "irc;bnc.ZombiePoet;24"
-cool.window = "1;0;15;1;-;-"
-cool.window = "2;1;0;0;irc;bnc.##knuddelkanal"
-cool.window = "3;1;0;0;perl;highmon"
-cool.current = on
+default.current = on
 
 [notify]
 
@@ -660,6 +675,8 @@ meta2-D = "/cursor move left"
 [key_mouse]
 @item(buffer_nicklist)>item(buddylist):button1-gesture-* = "hsignal:buddylist_mouse"
 @chat(*)>item(buddylist):button1-gesture-* = "hsignal:buddylist_mouse"
+@bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
+@bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
