--- a/.i3/config
+++ b/.i3/config
@@ -10,29 +10,41 @@ set $darkgray  #444444
 set $white     #FFFFFF
 set $urgentred #B33A3A
 
-set $lightTurq	#8abeb7
-set $notsoBlk	#222222
-set $nearlyBlk	#111111
-set $darkBlue	#1F1F22
-set $midGray	#999999
-set $highGray	#a5a5a5
-set $darkTurq	#2E3436
-
-# colors for the window borders
-# class					border			backgr.		text		indicator
-#client.focused			$lightTurq		$lightTurq	$nearlyBlk	$lightTurq
-#client.focused_inactive $darkBlue		$darkBlue	$midGray	$nearlyBlk
-#client.unfocused		$notsoBlk		$darkBlue	$midGray	$notsoBlk
-#client.urgent			$highGray		$darkBlue	$darkTurq	$highGray
-client.background		#161616
-#hide_edge_borders none
+#set $black      #0b1c2c
+#set $darkgrey  #627e99
+#set $orange      #bf8b56
+#set $green #56bf8b
+#set $brightgreen #8bbf56
+#set $purple  #8b56bf
+#set $pink #bf568b
+#set $blue #568bbf
+#set $white     #f7f9fb
+#set $lightgrey #cbd6e2
+#set $urgentred #B33A3A
 
 #                       BORDER     BACKGROUND TEXT   INDICATOR
+#client.focused          $purple      $purple    $white $purple
+#client.unfocused        $pink  $darkgrey  $white $black
+#client.focused_inactive $pink  $darkgrey  $white $black
+#client.urgent           $pink $pink $white $pink
+#client.background		#0b1c2c
+
+#set $lime      #fffffffffff
+#set $darklime  #839e6c
+#set $blue      #2f4153
+#set $lightblue #8fa1b3
+#set $lightgray #85939e
+#set $darkgray  #65737e
+#set $white     #c0c5ce
+#set $urgentred #bf616a
+#hide_edge_borders none
+
+##                       BORDER     BACKGROUND TEXT   INDICATOR
 client.focused          $lime      $lime      $white $lime
 client.unfocused        $darkgray  $darklime  $white $darklime
 client.focused_inactive $darkgray  $darklime  $white $darklime
 client.urgent           $urgentred $urgentred $white $urgentred
-
+client.background		#161616
 
 #set $ws1	"1"
 #set $ws2	"2"
@@ -81,9 +93,10 @@ for_window [class="Oblogout"] floating enable
 
 # Set background
 exec --no-startup-id nitrogen --restore
- exec --no-startup-id xset -b
- exec --no-startup-id setxkbmap de
+exec --no-startup-id xset -b
+exec --no-startup-id setxkbmap de
 exec --no-startup-id synclient touchpadoff=1
+#exec --no-startup-id compton -c -f -o 1.0 -I 0.1 -O 0.1 -C -z --vsync opengl-swc --unredir-if-possible --paint-on-overlay --backend glx
 
 #### Restore Layout 
 #exec --no-startup-id "i3-msg 'workspace 2:; append_layout /home/pez/.i3/workspace-2.json'"
@@ -99,7 +112,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+m exec dmenu_run -i -p "%" -nb "$blue" -nf "$lightgray" -sb "$lightblue" -sf "$lime"
+#bindsym $mod+m exec dmenu_run -i -p "%" -nb "$black" -nf "$white" -sb "$purple" -sf "$white"
+bindsym $mod+m exec dmenu_run -i -p "Search:" -nb "$blue" -nf "$lightgray" -sb "$lightblue" -sf "$lime"
 bindsym $mod+d exec dmenu_run -i -p "Search:" -nb "$blue" -nf "$lightgray" -sb "$lightblue" -sf "$lime"
 bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -i -p "Search:" -nb "$blue" -nf "$lightgray" -sb "$lightblue" -sf "$lime"'
 
@@ -232,33 +246,11 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        status_command i3status
-#		position		top
-#		#font pango:		SourceCodePro,Icons 8
-#		font pango:		Profont,Icons 8
-#		#font pango:		Gohufont,Icons 11
-#		#font pango:		AnonymousPro,Icons 9
-#		colors {
-#			background #1f1f22 
-#			statusline #f3f3f3
-#			
-#			focused_workspace: #444444 #8abeb7
-#			active_workspace: #1f1f22 #444444
-#			inactive_workspace: #202032 #555555
-#		}
-#		
-#}
-
 bar {
 		#mode hide
         status_command i3status 
         position top
         font pango:berry 8, Icons 8
-        #font pango:berry, Icons 8
-        #font pango:Inconsolata, Icons 10
         strip_workspace_numbers yes
         height 20
         colors {
@@ -273,6 +265,26 @@ bar {
                 urgent_workspace   $urgentred $urgentred $white
         }
 }
+
+#bar {
+#		#mode hide
+#        status_command i3status 
+#        position top
+#        font pango:berry 8, Icons 8
+#        strip_workspace_numbers yes
+#        height 20
+#        colors {
+#                statusline         $darkgrey
+#                background         $black
+#               #separator          $lime
+#                separator          $darkgrey
+#
+##                                  BORDER     BACKGROUND TEXT
+#                focused_workspace  $black $purple $white 
+#                inactive_workspace $black      $black      $white
+#                urgent_workspace   $pink $pink $white
+#        }
+#}
 
 set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|d|0 (local), Shift + +|-|d|0 (global)
